--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "console-stamp": "^0.2.6",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "jquery": "^3.3.1",
     "mongoose": "^5.2.13",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
     "pg": "^7.4.3",
+    "pg-copy-streams": "^1.2.0",
     "pg-hstore": "^2.3.2",
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
