--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cassandra-driver": "^3.5.0",
     "classnames": "^2.2.6",
     "console-stamp": "^0.2.6",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-cassandra": "^2.2.3",
     "fs": "0.0.1-security",
     "jquery": "^3.3.1",
     "mongoose": "^5.2.13",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
     "pg": "^7.4.3",
-    "pg-copy-streams": "^1.2.0",
-    "pg-hstore": "^2.3.2",
+    "pg-format": "^1.0.4",
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "rc-dropdown": "^2.2.0",
@@ -36,7 +37,6 @@
     "react-hot-loader": "^4.3.6",
     "react-motion": "^0.5.2",
     "reactstrap": "^6.4.0",
-    "sequelize": "^4.39.0",
     "svg-inline-react": "^3.1.0",
     "webpack-merge": "^4.1.4"
   },
