--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-hot-loader": "^4.3.6",
     "react-motion": "^0.5.2",
     "reactstrap": "^6.4.0",
+    "redis": "^2.8.0",
+    "response-time": "^2.3.2",
     "svg-inline-react": "^3.1.0",
     "webpack-merge": "^4.1.4"
   },
