--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.2.13",
     "morgan": "^1.9.1",
+    "newrelic": "^4.9.0",
     "nodemon": "^1.18.4",
     "pg": "^7.4.3",
     "pg-format": "^1.0.4",
